[metadata]
name = 1337x
version = 0.0.1
author = NicKoehler
author_email = grillinicolavocal@gmail.com
description = Finds torrents on 1337x
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickoehler/1337x
project_urls =
    Bug Tracker = https://github.com/nickoehler/1337x/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
